<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ctingcter.footballcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/pitch"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/HomeTeamName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/double_horizontal_margin"
                        android:hint="@string/teamhint" />

                    <TextView
                        android:id="@+id/HomeTeamScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/HomeTeamScore"
                        android:textSize="@dimen/scoreTextSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/AwayTeamName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/double_horizontal_margin"
                        android:hint="@string/teamhint" />

                    <TextView
                        android:id="@+id/AwayTeamScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/AwayTeamScore"
                        android:textSize="@dimen/scoreTextSize" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/HomeTeamGoals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/standard_vertical_margin"
                        android:text="@string/HomeTeamScore" />

                    <TextView
                        android:id="@+id/HomeTeamYellowCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/standard_vertical_margin"
                        android:text="@string/HomeTeamYellow" />

                    <TextView
                        android:id="@+id/HomeTeamRedCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/HomeTeamRed" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Goals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/standard_vertical_margin"
                        android:text="@string/Goals" />

                    <TextView
                        android:id="@+id/YellowCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/standard_vertical_margin"
                        android:text="@string/YellowCards" />

                    <TextView
                        android:id="@+id/RedCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/RedCards" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/AwayTeamGoals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/standard_vertical_margin"
                        android:text="@string/AwayTeamScore" />

                    <TextView
                        android:id="@+id/AwayTeamYellowCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/standard_vertical_margin"
                        android:text="@string/AwayTeamYellow" />

                    <TextView
                        android:id="@+id/AwayTeamRedCards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/AwayTeamRed" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/standard_vertical_padding">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/half_horizontal_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/HomeGoalBtn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/half_vertical_margin"
                    android:layout_weight="1"
                    android:background="@color/goal"
                    android:text="@string/Goal" />

                <Button
                    android:id="@+id/HomeYellowBtn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/half_vertical_margin"
                    android:layout_weight="1"
                    android:background="@color/yellowCard"
                    android:text="@string/Yellow" />

                <Button
                    android:id="@+id/HomeRedBtn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/redCard"
                    android:text="@string/Red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/half_horizontal_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/AwayGoalBtn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/half_vertical_margin"
                    android:layout_weight="1"
                    android:background="@color/goal"
                    android:text="@string/Goal" />

                <Button
                    android:id="@+id/AwayYellowBtn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/half_vertical_margin"
                    android:layout_weight="1"
                    android:background="@color/yellowCard"
                    android:text="@string/Yellow" />

                <Button
                    android:id="@+id/AwayRedBtn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/redCard"
                    android:text="@string/Red" />


            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/Reset"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_vertical_margin"
            android:background="@color/reset"
            android:text="@string/Reset"
            android:layout_marginLeft="@dimen/standard_horizontal_margin"
            android:layout_marginRight="@dimen/standard_horizontal_margin"/>

    </LinearLayout>
</RelativeLayout>
